--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Get a book here <a href="/book">here</a></p>
+<p>Get a library.book here <a href="/book">here</a></p>
 </body>
 </html>
